fix: disable broken z-index

--- a/web/src/components/modals/Notification/NotificationHost.css
+++ b/web/src/components/modals/Notification/NotificationHost.css
@@ -27,7 +27,7 @@
   position: absolute;
   box-sizing: border-box;
   display: flex;
-
+  z-index: 9;
   padding-bottom: 10px;
 }
 
